aws_infra/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: massage-website-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    # Add your EKS cluster host
    external-dns.alpha.kubernetes.io/hostname: "https://4C27E670F3E722774D98176FBDCAD63F.yl4.us-east-1.eks.amazonaws.com"
spec:
  rules:
  - host: https://4C27E670F3E722774D98176FBDCAD63F.yl4.us-east-1.eks.amazonaws.com  # Add your EKS cluster endpoint
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: massage-website-service
            port:
              number: 80
